# Cargo.toml
[package]
name = "f90nmlrs"
version = "0.1.1"
edition = "2021"
description = "A Rust-native library for parsing and generating Fortran 90 namelists"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-repo/f90nmlrs"
keywords = ["fortran", "namelist", "parsing", "f90"]
categories = ["parsing", "science"]

[features]
default = []
json = ["serde_json"]
yaml = ["serde_yaml"]
cli = ["clap"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[[bin]]
name = "f90nml"
path = "src/main.rs"
required-features = ["cli"]
