# schismrs/Cargo.toml

[package]
name = "schismrs"
version = "0.1.0"
edition = "2021"
authors = ["Jaime R Calzada <jreniel@gmail.com>"]
description = "Configuration management system for SCHISM ocean models"
license = "Propietary"
repository = "https://github.com/schism-dev/schismrs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
fs-err = "2.11"
# anyhow = "1.0"
schismrs-hgrid = { git = "https://github.com/jreniel/schismrs-hgrid.git" }
schismrs-vgrid = { git = "https://github.com/jreniel/schismrs-vgrid.git" }
schismrs-bctides = { git = "https://github.com/jreniel/schismrs-bctides.git" }
serde-saphyr = "0.0.4"
log = "0.4.28"
pretty_env_logger = "0.5.0"
anyhow = "1.0.100"
humantime = "2.3.0"
twox-hash = "2.1.2"

[dev-dependencies]
tempfile = "3.8"

